--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300;1,700&display=swap');
 
+body {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Roboto', sans-serif;
+}
 
-.header {
+.header, .footer {
     background-color: #1f2937;
     color: #f9faf8;
     font-size: 24px;
@@ -8,11 +14,17 @@
     justify-content: space-around;
     align-items: center;
     padding: 18px;
+    font-weight: bold;
 }
 
-.header a, .hero p, .footer {
+.header a, .hero p, .footer-text {
     color: #e5e7eb;
     font-size: 18px;
+    
+}
+
+.header a {
+    font-weight: 300;
 }
 
 .hero {
@@ -20,17 +32,35 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 48px;
+    padding: 48px 100px;
+    flex: auto;
+    gap: 48px;
 }
 
 .hero h2 {
     font-size: 48px;
     font-weight: 900;
     color: #f9faf8;
+    margin-bottom: 0;
+}
+
+.hero-left {
+    flex: 1;
+    max-width: 50%;
+    height: auto;
+    
+}
+
+.hero-image {
+    display: flex;
+    border: 2px solid white;
+    max-width: 50%;
+    
 }
 
 .hero img {
-
+    width: 300px;
+    height: auto;
 }
 
 a {
@@ -52,6 +82,39 @@ ul {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    
+}
+
+.boxes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 48px; 
+    margin: 48px;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    font-size: 18px;
+    gap: 6px;
+}
+
+.info-img {
+    border: 2px solid #3882f6;
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+}
+
+.info-subtext {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .testimonials {
@@ -61,11 +124,60 @@ ul {
     padding: 64px 200px;
     flex-direction: column;
     background-color: #e5e7eb;
+    
+}
+
+.quote {
+    font-size: 36px;
+    font-family: 'Roboto';
+    color: #1f2937;
+    font-style: italic;    
+    weight: 300;
+    margin-bottom: 0;
+}
+
+.quote-author {
+    font-weight: bold;
+    align-self: flex-end;
+    margin-top: 0;
+
+}
+
+.call-to-action {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:#3882f6;
+    margin: 56px 64px;
+    padding: 16px 92px;
+    border: 2px solid #3882f6;
+    border-radius: 10px;
+    color: #f9faf8;
+    font-size: 18px;
+    gap: 56px;
+}
+
+button {
+    background-color: #3882f6;
+    border: 2px solid #3882f6;
+    border-radius: 6px;
+    color: #f9faf8;
+    font-weight: 600;
+}
+
+.call-to-action button {
+    border: 2px solid #e5e7eb;
+    padding: 4px 16px;
+}
+
+.cta-button {
+    flex: none;
+}
+
+.cta-text {
+    flex: auto;
 }
 
 .footer {
-    background-color: #1f2937;
-    display:flex;
-    justify-content: center;
-    
+    font-weight: 300;
 }
